# SnakeServer

./: CMakeLists.txt  client.cpp  example_gtk.cpp  server.cpp
include/: Point.h  acts.h  client.h  colider.h  objects.h  server.h  snake.h
src/: Point.cpp  bot.cpp  client.cpp  colider.cpp  main.cpp  objects.cpp  server.cpp  snake.cpp
